<resources>
    <string name="app_name">App Pet Love</string>
    <string name="imagem_do_login">Imagem de login</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="senha_do_login">Senha do login</string>
    <string name="email_do_login">Email do login</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar_conta">Cadastrar conta</string>
    <string name="recuperar_conta">Recuperar conta</string>

</resources>